// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly 1`] = `
.c0 {
  grid-template-columns: repeat(18,1fr);
  display: grid;
  width: 100%;
}

<div
  class="c0"
>
  ContentGrid
</div>
`;

exports[`Grid with "fullsize" renders correctly 1`] = `
.c0 {
  grid-template-columns: repeat(18,1fr);
  display: grid;
  width: 100%;
}

<div
  class="c0"
>
  ContentGrid
</div>
`;

exports[`Grid with "narrow" renders correctly 1`] = `
.c0 {
  grid-template-columns: repeat(16,1fr);
  display: grid;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    grid-template-columns: repeat(8,1fr);
  }
}

@media (min-width:1200px) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

<div
  class="c0"
>
  ContentGrid
</div>
`;

exports[`Grid with "regular" renders correctly 1`] = `
.c0 {
  grid-template-columns: repeat(16,1fr);
  display: grid;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    grid-template-columns: repeat(14,1fr);
  }
}

<div
  class="c0"
>
  ContentGrid
</div>
`;

exports[`Grid with "rowGap" renders correctly 1`] = `
.c0 {
  grid-template-columns: repeat(18,1fr);
  row-gap: clamp(25px,5.55vw,100px);
  display: grid;
  width: 100%;
}

<div
  class="c0"
>
  ContentGrid
</div>
`;
